--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 		<head>
 				<title>Pihole Control</title>
 				<link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css">
-				<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 				<meta name="viewport" content="user-scalable=no, width=device-width">
 				<style type="text/css">
 				table { 
@@ -29,10 +28,14 @@
 						<h1 align="center">Pihole Control</h1>
 						<table align="center" style="width:90%;">
 								<tr>
-										<td><button class="btn btn-primary btn-lg" type="button" style="width:100%;" onclick="enable();">ENABLE PIHOLE</button></td>
+										<td>
+                        <button class="btn btn-primary btn-lg" type="button" style="width:100%;" onclick="enable();">ENABLE PIHOLE</button>
+                    </td>
 								</tr>
 								<tr>
-										<td><button class="btn btn-primary btn-lg" type="button" style="width:100%;" onclick="disable();">DISABLE PIHOLE</button></td>
+										<td>
+                        <button class="btn btn-primary btn-lg" type="button" style="width:100%;" onclick="disable();">DISABLE PIHOLE</button>
+                    </td>
 								</tr>
 								<tr>
 										<td>
@@ -46,33 +49,25 @@
 						</table>
 				</div>
 				<script>
+
 function setStatus(status) {
-		$('#status').html("STATUS: " + status.toUpperCase());
+    console.log("Status = " + JSON.stringify(status));
+		document.getElementById('status').innerHTML = "STATUS: " + status.toUpperCase();
+    var statusAlert = document.getElementById('status-alert');
 		if(status === "Enabled") {
-				$('#status-alert').addClass('alert-enabled').removeClass('alert-disabled');
+				statusAlert.classList.add('alert-enabled');
+				statusAlert.classList.remove('alert-disabled');
 		} else {
-				$('#status-alert').addClass('alert-disabled').removeClass('alert-enabled');
+				statusAlert.classList.add('alert-disabled');
+        statusAlert.classList.remove('alert-enabled');
 		}
 }
 
-$( document ).ready(function() {
-		$.get("/status", function(data) {
-				console.log("Current Status: " + data);
-				setStatus(data);
-		});
-});
+const disable = _ => fetch("/control/disable").then(response => { response.text().then(setStatus); });
+const enable = _ => fetch("/control/enable").then(response => { response.text().then(setStatus); });
+const initialize = _ => fetch("/status").then(response => { response.text().then(setStatus); });
+document.addEventListener('DOMContentLoaded', _ => initialize());
 
-function disable() {
-		$.get("/control/disable", function(status) {
-				setStatus(status);
-		});
-}
-
-function enable() {
-		$.get("/control/enable", function(status) {
-				setStatus(status);
-		});
-}
 				</script>
 		</body>
 </html>
