--- a/public/index.html
+++ b/public/index.html
@@ -22,10 +22,89 @@
 						color: #b94a48;
 				}
 				</style>
+
+        
+				<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+				<script>
+					// Initialize Firebase
+					var config = {
+						apiKey: "AIzaSyD7BweyD6hJYW4NqTULbxw0MdyoWg6jftg",
+						authDomain: "pihole-control.firebaseapp.com",
+						databaseURL: "https://pihole-control.firebaseio.com",
+						projectId: "pihole-control",
+						storageBucket: "pihole-control.appspot.com",
+						messagingSenderId: "210194800964"
+					};
+					firebase.initializeApp(config);
+				</script>
+
+
+        <!-- update the version number as needed -->
+        <script defer src="/__/firebase/4.1.3/firebase-app.js"></script>
+        <!-- include only the Firebase features as you need -->
+        <script defer src="/__/firebase/4.1.3/firebase-auth.js"></script>
+        <script defer src="/__/firebase/4.1.3/firebase-database.js"></script>
+        <!-- initialize the SDK after all desired features are loaded -->
+        <script defer src="/__/firebase/init.js"></script>
+
+
+        <script src="https://cdn.firebase.com/libs/firebaseui/2.2.1/firebaseui.js"></script>
+        <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.2.1/firebaseui.css" />
+
+				<script type="text/javascript">
+						var handleSignedInUser = function(user) {
+							document.getElementById('user-signed-in').style.display = 'block';
+							document.getElementById('user-signed-out').style.display = 'none';
+							document.getElementById('email').textContent = user.email;
+						};
+
+						/**
+						 * Displays the UI for a signed out user.
+						 */
+						var handleSignedOutUser = function() {
+							document.getElementById('user-signed-in').style.display = 'none';
+							document.getElementById('user-signed-out').style.display = 'block';
+							ui.start('#firebaseui-container', getUiConfig());
+						};
+
+						// Listen to change in auth state so it displays the correct UI for when
+						// the user is signed in or not.
+						firebase.auth().onAuthStateChanged(function(user) {
+							document.getElementById('loading').style.display = 'none';
+							document.getElementById('loaded').style.display = 'block';
+							console.log("onAuthStateChanged: User = " + JSON.stringify(user));
+							user ? handleSignedInUser(user) : handleSignedOutUser();
+						});
+
+					// FirebaseUI config.
+            var uiConfig = {
+                'callbacks': {
+                    // Called when the user has been successfully signed in.
+                    'signInSuccess': function(user, credential, redirectUrl) {
+                        handleSignedInUser(user);
+                        // Do not redirect.
+                        return false;
+                    }
+                },
+                'signInFlow': 'popup',
+                signInOptions: [
+                    // Leave the lines as is for the providers you want to offer your users.
+                    firebase.auth.GoogleAuthProvider.PROVIDER_ID,
+                ]
+            };
+
+					// Initialize the FirebaseUI Widget using Firebase.
+					var ui = new firebaseui.auth.AuthUI(firebase.auth());
+					// The start method will wait until the DOM is loaded.
+					ui.start('#firebaseui-auth-container', uiConfig);
+				</script>
+
 		</head>
 		<body>
 				<div class="jumbotron">
 						<h1 align="center">Pihole Control</h1>
+						<div id="loading" align="center">Loading...</div>
+						<div id="loaded"  align="center" class="hidden"></div>
 						<table align="center" style="width:90%;">
 								<tr>
 										<td>
@@ -46,26 +125,83 @@
 												</div>
 										</td>
 								</tr>
+                <tr>
+                    <td>
+                      <div id="load">Firebase status</div>
+                    </td>
+                </tr>
 						</table>
 				</div>
+				<div id="firebaseui-auth-container"></div>
+				<div id="user-signed-in">
+						<div id="user-info">
+								<div id="email"></div>
+						</div>
+						<p>
+								<button id="sign-out">Sign Out</button>
+						</p>
+				</div>
+				<div id="user-signed-out">
+						<h4>You are signed out.</h4>
+						<div id="firebaseui-container"></div>
+				</div>
+
 				<script>
 
 function setStatus(status) {
-    console.log("Status = " + JSON.stringify(status));
+		console.log("Status = " + JSON.stringify(status));
 		document.getElementById('status').innerHTML = "STATUS: " + status.toUpperCase();
-    var statusAlert = document.getElementById('status-alert');
+		var statusAlert = document.getElementById('status-alert');
 		if(status === "Enabled") {
 				statusAlert.classList.add('alert-enabled');
 				statusAlert.classList.remove('alert-disabled');
 		} else {
 				statusAlert.classList.add('alert-disabled');
-        statusAlert.classList.remove('alert-enabled');
+				statusAlert.classList.remove('alert-enabled');
+		}
+}
+
+const disable = _ => changeStatus("Disabled");
+const enable = _ => changeStatus("Enabled");
+
+// const initStatus = _ => fetch("/status").then(response => { response.text().then(setStatus); });
+
+const stateRef = 'pihole-state';
+
+function changeStatus(newStatus) {
+		firebase.database().ref(stateRef).set({stat: newStatus});
+}
+
+function initialize() {
+
+		document.getElementById('sign-out').addEventListener('click', function() {
+        console.log("Signing out");
+				firebase.auth().signOut();
+		});
+    
+		try {
+				let app = firebase.app();
+				let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
+				document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
+
+				firebase.database().ref(stateRef).on('value', function(snapshot) {
+						console.log("Dbase change detected - updating status");
+						setStatus(snapshot.val().stat);
+				});
+
+				// Default to enabled
+				changeStatus("Enabled");
+
+		} catch (e) {
+				console.error(e);
+				document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
 		}
 }
 
 const disable = _ => fetch("/control/disable").then(response => response.text()).then(setStatus);
 const enable = _ => fetch("/control/enable").then(response => response.text()).then(setStatus);
 const initialize = _ => fetch("/status").then(response => response.text()).then(setStatus);
+
 document.addEventListener('DOMContentLoaded', _ => initialize());
 
 				</script>
