--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,6 @@
 				}
 				</style>
 
-        
 				<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
 				<script>
 					// Initialize Firebase
@@ -38,7 +37,6 @@
 					firebase.initializeApp(config);
 				</script>
 
-
         <!-- update the version number as needed -->
         <script defer src="/__/firebase/4.1.3/firebase-app.js"></script>
         <!-- include only the Firebase features as you need -->
@@ -47,51 +45,21 @@
         <!-- initialize the SDK after all desired features are loaded -->
         <script defer src="/__/firebase/init.js"></script>
 
-        <script src="https://cdn.firebase.com/libs/firebaseui/2.2.1/firebaseui.js"></script>
-        <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.2.1/firebaseui.css" />
-
 				<script type="text/javascript">
 
 var handleSignedInUser = function(user) {
-    console.log("Handling signed in user");
+    console.log("Handling signed in user " + user.email);
     document.getElementById('user-signed-in').style.display = 'block';
     document.getElementById('user-signed-out').style.display = 'none';
-    document.getElementById('firebaseui-auth-container').style.display = 'none';
     document.getElementById('email').textContent = user.email;
+    addDatabaseCallback();
 };
 
-/**
- * Displays the UI for a signed out user.
- */
 var handleSignedOutUser = function() {
     console.log("Handling signed out user");
     document.getElementById('user-signed-in').style.display = 'none';
     document.getElementById('user-signed-out').style.display = 'block';
-    document.getElementById('firebaseui-auth-container').style.display = 'block';
 };
-
-
-// FirebaseUI config.
-var uiConfig = {
-    'callbacks': {
-        // Called when the user has been successfully signed in.
-        'signInSuccess': function(user, credential, redirectUrl) {
-            handleSignedInUser(user);
-            // Do not redirect.
-            return false;
-        }
-    },
-    'signInFlow': 'popup',
-    signInOptions: [
-        // Leave the lines as is for the providers you want to offer your users.
-        firebase.auth.GoogleAuthProvider.PROVIDER_ID,
-    ]
-};
-
-// Initialize the FirebaseUI Widget using Firebase.
-var ui = new firebaseui.auth.AuthUI(firebase.auth());
-// The start method will wait until the DOM is loaded.
-ui.start('#firebaseui-auth-container', uiConfig);
 
 function setStatus(status) {
     console.log("Status = " + JSON.stringify(status));
@@ -114,41 +82,68 @@ const enable = _ => changeStatus("Enabled");
 const stateRef = 'pihole-state';
 
 function changeStatus(newStatus) {
-    firebase.database().ref(stateRef).set({stat: newStatus});
+    firebase.database().ref(stateRef).set({stat: newStatus}).then(_ => {
+        console.log("Updated database to " + newStatus)
+    }).catch(e => {
+        console.log("Error updating database: " + e);
+    });
 }
 
-function initialize() {
-
+function addButtonListeners() {
     document.getElementById('sign-out').addEventListener('click', function() {
         console.log("Signing out");
         firebase.auth().signOut().then(_ => {
-            console.log("Signed out OK");
+            handleSignedOutUser();
         }).catch(_ => {
             console.log("Failed to sign out");
         });
     });
 
-    // Listen to change in auth state so it displays the correct UI for when
-    // the user is signed in or not.
-    firebase.auth().onAuthStateChanged(function(user) {
-        document.getElementById('loading').style.display = 'none';
-        document.getElementById('loaded').style.display = 'block';
-        console.log("onAuthStateChanged..."); 
-        user ? handleSignedInUser(user) : handleSignedOutUser();
-    });
+    document.getElementById('sign-in').addEventListener('click', function() {
+        console.log("Signing in");
+        var provider = new firebase.auth.GoogleAuthProvider();
 
+        firebase.auth().signInWithPopup(provider).then(_ => {
+            handleSignedInUser(result.user);
+        }).catch(function(error) {
+            // Handle Errors here.
+            console.log("Failed to log in " + error.email);
+        });
+    });
+}
+
+function addAuthStateHandler() {
+    firebase.auth().onAuthStateChanged(function(user) {
+        console.log("AuthStateChanged");
+        window.user = user;
+
+        if(user != undefined) {
+            handleSignedInUser(user);
+        } else {
+            handleSignedOutUser();
+        }
+    });
+}
+
+function addDatabaseCallback() {
+    firebase.database().ref(stateRef).on('value', function(snapshot) {
+        console.log("Dbase change detected - updating status");
+        setStatus(snapshot.val().stat);
+    });
+}
+
+function queryDatabaseStatus() {
+    firebase.database().ref(stateRef).once('value').then(snapshot => {
+        console.log("Current Status is " + snapshot.val().stat);
+        setStatus(snapshot.val().stat);
+    });
+}
+
+function initFirebaseSdk() {
     try {
         let app = firebase.app();
         let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
         document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-
-        firebase.database().ref(stateRef).on('value', function(snapshot) {
-            console.log("Dbase change detected - updating status");
-            setStatus(snapshot.val().stat);
-        });
-
-        // Default to enabled
-        changeStatus("Enabled");
 
     } catch (e) {
         console.error(e);
@@ -160,17 +155,21 @@ const disable = _ => fetch("/control/disable").then(response => response.text())
 const enable = _ => fetch("/control/enable").then(response => response.text()).then(setStatus);
 const initialize = _ => fetch("/status").then(response => response.text()).then(setStatus);
 
+function initialize() {
+    addButtonListeners();
+    addAuthStateHandler();
+    initFirebaseSdk();
+    queryDatabaseStatus();
+}
+
 document.addEventListener('DOMContentLoaded', _ => initialize());
 
-        </script>
         </script>
 
     </head>
     <body>
         <div class="jumbotron">
             <h1 align="center">Pihole Control</h1>
-            <div id="loading" align="center">Loading...</div>
-            <div id="loaded"  align="center" class="hidden"></div>
             <table align="center" style="width:90%;">
                 <tr>
                     <td>
@@ -198,19 +197,14 @@ document.addEventListener('DOMContentLoaded', _ => initialize());
                 </tr>
             </table>
         </div>
-        <div id="user-signed-in">
-            <div id="user-info">
-                <div id="email"></div>
-            </div>
-            <p>
+
+        <div id="user-signed-in" style="display: none">
+            <h4 id="email"></h4>
             <button id="sign-out">Sign Out</button>
-            </p>
         </div>
         <div id="user-signed-out">
             <h4>You are signed out.</h4>
-            <div id="firebaseui-auth-container">
-                <div id="firebaseui-container"></div>
-            </div>
+            <button id="sign-in">Sign In</button>
         </div>
 
     </body>
