--- a/public/index.html
+++ b/public/index.html
@@ -24,18 +24,6 @@
 				</style>
 
 				<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
-				<script>
-					// Initialize Firebase
-					var config = {
-						apiKey: "AIzaSyD7BweyD6hJYW4NqTULbxw0MdyoWg6jftg",
-						authDomain: "pihole-control.firebaseapp.com",
-						databaseURL: "https://pihole-control.firebaseio.com",
-						projectId: "pihole-control",
-						storageBucket: "pihole-control.appspot.com",
-						messagingSenderId: "210194800964"
-					};
-					firebase.initializeApp(config);
-				</script>
 
         <!-- update the version number as needed -->
         <script defer src="/__/firebase/4.1.3/firebase-app.js"></script>
@@ -45,125 +33,9 @@
         <!-- initialize the SDK after all desired features are loaded -->
         <script defer src="/__/firebase/init.js"></script>
 
-				<script type="text/javascript">
-
-var handleSignedInUser = function(user) {
-    console.log("Handling signed in user " + user.email);
-    document.getElementById('user-signed-in').style.display = 'block';
-    document.getElementById('user-signed-out').style.display = 'none';
-    document.getElementById('email').textContent = user.email;
-    addDatabaseCallback();
-};
-
-var handleSignedOutUser = function() {
-    console.log("Handling signed out user");
-    document.getElementById('user-signed-in').style.display = 'none';
-    document.getElementById('user-signed-out').style.display = 'block';
-};
-
-function setStatus(status) {
-    console.log("Status = " + JSON.stringify(status));
-    document.getElementById('status').innerHTML = "STATUS: " + status.toUpperCase();
-    var statusAlert = document.getElementById('status-alert');
-    if(status === "Enabled") {
-        statusAlert.classList.add('alert-enabled');
-        statusAlert.classList.remove('alert-disabled');
-    } else {
-        statusAlert.classList.add('alert-disabled');
-        statusAlert.classList.remove('alert-enabled');
-    }
-}
-
-const disable = _ => changeStatus("Disabled");
-const enable = _ => changeStatus("Enabled");
-
-// const initStatus = _ => fetch("/status").then(response => { response.text().then(setStatus); });
-
-const stateRef = 'pihole-state';
-
-function changeStatus(newStatus) {
-    firebase.database().ref(stateRef).set({stat: newStatus}).then(_ => {
-        console.log("Updated database to " + newStatus)
-    }).catch(e => {
-        console.log("Error updating database: " + e);
-    });
-}
-
-function addButtonListeners() {
-    document.getElementById('sign-out').addEventListener('click', function() {
-        console.log("Signing out");
-        firebase.auth().signOut().then(_ => {
-            handleSignedOutUser();
-        }).catch(_ => {
-            console.log("Failed to sign out");
-        });
-    });
-
-    document.getElementById('sign-in').addEventListener('click', function() {
-        console.log("Signing in");
-        var provider = new firebase.auth.GoogleAuthProvider();
-
-        firebase.auth().signInWithPopup(provider).then(_ => {
-            handleSignedInUser(result.user);
-        }).catch(function(error) {
-            // Handle Errors here.
-            console.log("Failed to log in " + error.email);
-        });
-    });
-}
-
-function addAuthStateHandler() {
-    firebase.auth().onAuthStateChanged(function(user) {
-        console.log("AuthStateChanged");
-        window.user = user;
-
-        if(user != undefined) {
-            handleSignedInUser(user);
-        } else {
-            handleSignedOutUser();
-        }
-    });
-}
-
-function addDatabaseCallback() {
-    firebase.database().ref(stateRef).on('value', function(snapshot) {
-        console.log("Dbase change detected - updating status");
-        setStatus(snapshot.val().stat);
-    });
-}
-
-function queryDatabaseStatus() {
-    firebase.database().ref(stateRef).once('value').then(snapshot => {
-        console.log("Current Status is " + snapshot.val().stat);
-        setStatus(snapshot.val().stat);
-    });
-}
-
-function initFirebaseSdk() {
-    try {
-        let app = firebase.app();
-        let features = ['auth', 'database', 'messaging', 'storage'].filter(feature => typeof app[feature] === 'function');
-        document.getElementById('load').innerHTML = `Firebase SDK loaded with ${features.join(', ')}`;
-
-    } catch (e) {
-        console.error(e);
-        document.getElementById('load').innerHTML = 'Error loading the Firebase SDK, check the console.';
-    }
-}
-
-const disable = _ => fetch("/control/disable").then(response => response.text()).then(setStatus);
-const enable = _ => fetch("/control/enable").then(response => response.text()).then(setStatus);
-const initialize = _ => fetch("/status").then(response => response.text()).then(setStatus);
-
-function initialize() {
-    addButtonListeners();
-    addAuthStateHandler();
-    initFirebaseSdk();
-    queryDatabaseStatus();
-}
-
-document.addEventListener('DOMContentLoaded', _ => initialize());
-
+        <script type="text/javascript" src="javascripts/authentication.js"></script>
+        <script type="text/javascript" src="javascripts/status.js"></script>
+        <script type="text/javascript" src="javascripts/init.js"></script>
         </script>
 
     </head>
