--- a/public/index.html
+++ b/public/index.html
@@ -3,28 +3,10 @@
 		<head>
 				<title>Pihole Control</title>
 				<link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css">
+        <link rel="stylesheet" href="css/pihole-control.css">
 				<meta name="viewport" content="user-scalable=no, width=device-width">
-				<style type="text/css">
-				table { 
-						border: 2px solid black; 
-				} 
-				th, td { 
-						padding: 10px; 
-				}
-				.alert-enabled { 
-						background-color: #dff0d8;
-						border-color: #468847;
-						color: #468847;
-				}
-				.alert-disabled { 
-						background-color: #f2dede;
-						border-color: #b94a48;
-						color: #b94a48;
-				}
-				</style>
 
 				<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
-
         <!-- update the version number as needed -->
         <script defer src="/__/firebase/4.1.3/firebase-app.js"></script>
         <!-- include only the Firebase features as you need -->
@@ -36,8 +18,6 @@
         <script type="text/javascript" src="javascripts/authentication.js"></script>
         <script type="text/javascript" src="javascripts/status.js"></script>
         <script type="text/javascript" src="javascripts/init.js"></script>
-        </script>
-
     </head>
     <body>
         <div class="jumbotron">
