--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-		<head>
-				<title>Pihole Control</title>
-				<link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css">
+    <head>
+        <title>Pihole Control</title>
+        <link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css">
         <link rel="stylesheet" href="css/pihole-control.css">
-				<meta name="viewport" content="user-scalable=no, width=device-width">
+        <meta name="viewport" content="user-scalable=no, width=device-width">
 
-				<script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
         <!-- update the version number as needed -->
         <script defer src="/__/firebase/4.1.3/firebase-app.js"></script>
         <!-- include only the Firebase features as you need -->
@@ -43,6 +43,18 @@
                     </td>
                 </tr>
                 <tr>
+                    <td align="right">
+                        <div id="user-signed-in" style="display: none">
+                            <h4 id="email"></h4>
+                            <button id="sign-out">Sign Out</button>
+                        </div>
+                        <div id="user-signed-out">
+                            <h4>You are signed out.</h4>
+                            <button id="sign-in">Sign In</button>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
                     <td>
                         <div id="load">Firebase status</div>
                     </td>
@@ -50,14 +62,6 @@
             </table>
         </div>
 
-        <div id="user-signed-in" style="display: none">
-            <h4 id="email"></h4>
-            <button id="sign-out">Sign Out</button>
-        </div>
-        <div id="user-signed-out">
-            <h4>You are signed out.</h4>
-            <button id="sign-in">Sign In</button>
-        </div>
 
     </body>
 </html>
