--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <title>Pihole Control</title>
         <link rel="stylesheet" href="https://bootswatch.com/slate/bootstrap.min.css">
         <link rel="stylesheet" href="css/pihole-control.css">
+        <link rel="icon" href="images/favicon.png" />
         <meta name="viewport" content="user-scalable=no, width=device-width">
 
         <script src="https://www.gstatic.com/firebasejs/4.1.3/firebase.js"></script>
